objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AW_AdviserBranch__c</fullName>
        <description>Non-displayed field used in Campaign Dashboard</description>
        <formula>Owner.AW_Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adviser Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Age__c</fullName>
        <description>Shows age without decimal</description>
        <formula>MFLOOR(
    FinServ__Age__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_AlternativeEmail__c</fullName>
        <description>This is a field to add an additional email address.</description>
        <inlineHelpText>Please note that only the primary email address on an Account will be synced with the Workbench, this alternative email address captured will be for information purposes only and no email message or calendar items can be imported.</inlineHelpText>
        <label>Alternative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AW_AnnualReviewDateCompleted__c</fullName>
        <description>Updated from process builder after review meeting has been completed.</description>
        <label>Annual Review Date - Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_AnnualReviewDate__c</fullName>
        <description>The month in which annual review should be done as per set on the client&apos;s profile</description>
        <formula>IF(AW_MonthtoNumber__c &lt; MONTH(TODAY()),
    CASE(
        AW_ReviewMonth__c,
        &apos;January&apos;,ADDMONTHS(DATE(YEAR(TODAY()),01,01),12),
        &apos;February&apos;,ADDMONTHS(DATE(YEAR(TODAY()),02,01),12),
        &apos;March&apos;,ADDMONTHS(DATE(YEAR(TODAY()),03,01),12),
        &apos;April&apos;,ADDMONTHS(DATE(YEAR(TODAY()),04,01),12),
        &apos;May&apos;,ADDMONTHS(DATE(YEAR(TODAY()),05,01),12),
        &apos;June&apos;,ADDMONTHS(DATE(YEAR(TODAY()),06,01),12),
        &apos;July&apos;,ADDMONTHS(DATE(YEAR(TODAY()),07,01),12),
        &apos;August&apos;,ADDMONTHS(DATE(YEAR(TODAY()),08,01),12),
        &apos;September&apos;,ADDMONTHS(DATE(YEAR(TODAY()),09,01),12),
        &apos;October&apos;,ADDMONTHS(DATE(YEAR(TODAY()),10,01),12),
        &apos;November&apos;,ADDMONTHS(DATE(YEAR(TODAY()),11,01),12),
        ADDMONTHS(DATE(YEAR(TODAY()),12,01),12)
        ),
    CASE(  
        AW_ReviewMonth__c  ,
        &apos;January&apos;,DATE(YEAR(TODAY()),01,01),
        &apos;February&apos;,DATE(YEAR(TODAY()),02,01),
        &apos;March&apos;, DATE(YEAR(TODAY()),03,01),
        &apos;April&apos;,DATE(YEAR(TODAY()),04,01),
        &apos;May&apos;,DATE(YEAR(TODAY()),05,01),
        &apos;June&apos;, DATE(YEAR(TODAY()),06,01),
        &apos;July&apos;,DATE(YEAR(TODAY()),07,01),
        &apos;August&apos;,DATE(YEAR(TODAY()),08,01),
        &apos;September&apos;, DATE(YEAR(TODAY()),09,01),
        &apos;October&apos;,DATE(YEAR(TODAY()),10,01),
        &apos;November&apos;,DATE(YEAR(TODAY()),11,01), 
        DATE(YEAR(TODAY()),12,01)
        )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start of Annual Review Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_BankAccountHolderName__c</fullName>
        <description>Bank Account Holder Name</description>
        <label>Bank Account Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_BankAccountNumber__c</fullName>
        <description>This indicates the Bank Account Number of the contact</description>
        <label>Bank Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_BankAccountType__c</fullName>
        <description>This indicates type of bank account</description>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_BankAccountType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_BankBranchCode__c</fullName>
        <description>Auto Fetched Bank Branch Code</description>
        <formula>AW_BankBranchName__r.AW_BranchCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Branch Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_BankBranchName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates bank branch record</description>
        <inlineHelpText>Search for the Branch using the Bank name or Branch Name or Branch Code.</inlineHelpText>
        <label>Bank Branch Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AW_BankBranch__c.AW_BankName__c</field>
                <operation>equals</operation>
                <valueField>$Source.AW_BankName__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AW_BankBranch__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_BankName__c</fullName>
        <description>This field is used to store the Bank Name of the Contact</description>
        <label>Bank Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_BankName</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Birthdate_for_Lead_Conversion__c</fullName>
        <description>Due to the current Salesforce issue of only allowing conversion of standard fields on a lead to a standard field on account or contact or opportunity, we are unable to map a custom birthday field on lead to the standard field on contact. This field allows the mapping and should be then written into the standard field. Do not allow edits of this field.</description>
        <label>Date of Birth (for Lead Conversion)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_BirthdayMonth__c</fullName>
        <description>This formula returns the month in words based on the Birthdate field</description>
        <formula>CASE(MONTH(Birthdate ), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthday Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_EducationLevel__c</fullName>
        <description>This field is used to store the Education Level of the Contact</description>
        <label>Education Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>(none)</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>No Matric</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Matric</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 or 4 Year Technikon or Teachers College Diploma</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Undergraduate University Degree</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Postgraduate Qualification</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Future Professional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_EmployedBusinessOwner__c</fullName>
        <description>User can select if they are employed or a business owner.</description>
        <label>Employed/Business Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>Business Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_ExpiryDate__c</fullName>
        <description>This field represents the Expiry Date on Passports, ID and Registrations</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_FamilyId__c</fullName>
        <description>Type in the 6 character Family ID</description>
        <label>Family ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_FamilyMemberType__c</fullName>
        <description>Which role in family does the contact play</description>
        <label>Family Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adult</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_FifthName__c</fullName>
        <description>This field is used to store Fifth Name of the Contact</description>
        <label>Fifth Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_FourthName__c</fullName>
        <description>This field is used to store Fourth name of the contact</description>
        <label>Fourth Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_HobbyInterest__c</fullName>
        <description>This field is used to store Hobbies &amp; Interests of the Contact</description>
        <label>Hobbies/Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3D printing</fullName>
                </value>
                <value>
                    <fullName>Air sports</fullName>
                </value>
                <value>
                    <fullName>Archery</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Astronomy</fullName>
                </value>
                <value>
                    <fullName>Baking</fullName>
                </value>
                <value>
                    <fullName>BASE jumping</fullName>
                </value>
                <value>
                    <fullName>Baseball</fullName>
                </value>
                <value>
                    <fullName>Basketball</fullName>
                </value>
                <value>
                    <fullName>Beekeeping</fullName>
                </value>
                <value>
                    <fullName>Bird watching</fullName>
                </value>
                <value>
                    <fullName>Blogging</fullName>
                </value>
                <value>
                    <fullName>BMX</fullName>
                </value>
                <value>
                    <fullName>Bodybuilding</fullName>
                </value>
                <value>
                    <fullName>Butterfly watching</fullName>
                </value>
                <value>
                    <fullName>Calligraphy</fullName>
                </value>
                <value>
                    <fullName>Camping</fullName>
                </value>
                <value>
                    <fullName>Canoeing</fullName>
                </value>
                <value>
                    <fullName>Composting</fullName>
                </value>
                <value>
                    <fullName>Cooking</fullName>
                </value>
                <value>
                    <fullName>Crossword puzzles</fullName>
                </value>
                <value>
                    <fullName>Dance</fullName>
                </value>
                <value>
                    <fullName>DIY</fullName>
                </value>
                <value>
                    <fullName>Fashion design</fullName>
                </value>
                <value>
                    <fullName>Fishing</fullName>
                </value>
                <value>
                    <fullName>Flying</fullName>
                </value>
                <value>
                    <fullName>Gaming</fullName>
                </value>
                <value>
                    <fullName>Gardening</fullName>
                </value>
                <value>
                    <fullName>Graffiti</fullName>
                </value>
                <value>
                    <fullName>Graphic design</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_IdentificationNumber__c</fullName>
        <description>This is the Identification number for the Client (Passport or RSA ID)</description>
        <inlineHelpText>The Gender and Date of Birth will be derived from a valid South African Identification Number entered.</inlineHelpText>
        <label>Identification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_IdentificationType__c</fullName>
        <description>Denotes type as passport or ID</description>
        <label>Identification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_IdentificationType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Income__c</fullName>
        <description>This indicates the income of Contact</description>
        <label>Annual Gross Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_IssueDate__c</fullName>
        <description>This field represents the Issue Date on Passports, ID and Registrations</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_Maiden_Name__c</fullName>
        <description>This field is used to store Maiden Name of the Contact</description>
        <label>Maiden Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MedicalAidName__c</fullName>
        <description>This field is used to store Medical Aid Name of the Contact</description>
        <label>Medical Aid Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>173</fullName>
                    <label>AECI Medical Aid Society</label>
                </value>
                <value>
                    <fullName>Alliance-Midmed Medical Scheme</fullName>
                </value>
                <value>
                    <fullName>Anglo Medical Scheme</fullName>
                </value>
                <value>
                    <fullName>Anglovaal Group Medical Scheme</fullName>
                </value>
                <value>
                    <fullName>Bankmed</fullName>
                </value>
                <value>
                    <fullName>Barloworld Medical Scheme</fullName>
                </value>
                <value>
                    <fullName>Bestmed Medical Scheme</fullName>
                </value>
                <value>
                    <fullName>BMW Employees Medical Aid Society</fullName>
                </value>
                <value>
                    <fullName>Bonitas Medical Fund</fullName>
                </value>
                <value>
                    <fullName>Bonitas Medical Fund/Liberty</fullName>
                </value>
                <value>
                    <fullName>BP Medical Aid Society</fullName>
                </value>
                <value>
                    <fullName>Building &amp; Construction Industry Medical Aid Fund</fullName>
                </value>
                <value>
                    <fullName>Cape Medical Plan</fullName>
                </value>
                <value>
                    <fullName>Chartered Accountants ( SA ) Medical Aid Fund ( CAMAF )</fullName>
                </value>
                <value>
                    <fullName>Compcare Wellness Medical Scheme</fullName>
                </value>
                <value>
                    <fullName>De Beers Benefit Society</fullName>
                </value>
                <value>
                    <fullName>Discovery Health Medical Scheme</fullName>
                </value>
                <value>
                    <fullName>Engen Medical Benefit Fund</fullName>
                </value>
                <value>
                    <fullName>Fedhealth Medical Scheme</fullName>
                </value>
                <value>
                    <fullName>Fishing Industry Medical Scheme ( Fishmed )</fullName>
                </value>
                <value>
                    <fullName>Food Workers Medical Benefit Fund</fullName>
                </value>
                <value>
                    <fullName>Genesis Medical Scheme</fullName>
                </value>
                <value>
                    <fullName>Glencore Medical Scheme</fullName>
                </value>
                <value>
                    <fullName>Golden Arrow Employees&apos; Medical Benefit Fund</fullName>
                </value>
                <value>
                    <fullName>Government Employees Medical Scheme ( GEMS )</fullName>
                </value>
                <value>
                    <fullName>Grintek Electronics Medical Aid Scheme</fullName>
                </value>
                <value>
                    <fullName>Horizon Medical Scheme</fullName>
                </value>
                <value>
                    <fullName>Hosmed Medical Aid Scheme</fullName>
                </value>
                <value>
                    <fullName>Impala Medical Plan</fullName>
                </value>
                <value>
                    <fullName>Imperial Group Medical Scheme</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_MedicalAidNumber__c</fullName>
        <description>This field is used to store the account number of the Medical Aid</description>
        <label>Medical Aid Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MedicalAidPlanName__c</fullName>
        <description>Select Medical Air Plan Name</description>
        <label>Medical Aid Plan Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>107</fullName>
                </value>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Activator</fullName>
                </value>
                <value>
                    <fullName>Advance</fullName>
                </value>
                <value>
                    <fullName>Affordable Option</fullName>
                </value>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Alliance-Midmed Medical Scheme</fullName>
                </value>
                <value>
                    <fullName>Alpha</fullName>
                </value>
                <value>
                    <fullName>Anglovaal Group Medical Scheme</fullName>
                </value>
                <value>
                    <fullName>Aquarium</fullName>
                </value>
                <value>
                    <fullName>Axis ( Network )</fullName>
                </value>
                <value>
                    <fullName>Axis ( Non-Network )</fullName>
                </value>
                <value>
                    <fullName>Bankmed Basic</fullName>
                </value>
                <value>
                    <fullName>Bankmed Comprehensive</fullName>
                </value>
                <value>
                    <fullName>Bankmed Core Saver</fullName>
                </value>
                <value>
                    <fullName>Bankmed Essential Plan</fullName>
                </value>
                <value>
                    <fullName>Bankmed Plus</fullName>
                </value>
                <value>
                    <fullName>Bankmed PMB</fullName>
                </value>
                <value>
                    <fullName>Bankmed Traditional</fullName>
                </value>
                <value>
                    <fullName>Barloworld Medical Scheme</fullName>
                </value>
                <value>
                    <fullName>Basic option</fullName>
                </value>
                <value>
                    <fullName>Beat 1 ( Network )</fullName>
                </value>
                <value>
                    <fullName>Beat 1 ( Non-Network )</fullName>
                </value>
                <value>
                    <fullName>Beat 2 ( Network )</fullName>
                </value>
                <value>
                    <fullName>Beat 2 ( Non-Network )</fullName>
                </value>
                <value>
                    <fullName>Beat 3 ( Network )</fullName>
                </value>
                <value>
                    <fullName>Beat 3 ( Non-Network )</fullName>
                </value>
                <value>
                    <fullName>Beat 4</fullName>
                </value>
                <value>
                    <fullName>Beryl</fullName>
                </value>
                <value>
                    <fullName>Blue Door Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_MedicalPractitionerName__c</fullName>
        <description>Name Of Medical Practitioner</description>
        <label>Medical Practitioner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_MedicalPractitionerTelNo__c</fullName>
        <description>Phone Number of Medical Practitioner</description>
        <label>Medical Practitioner Tel No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AW_MonthtoNumber__c</fullName>
        <description>Sets the month selected in AW_ReviewMonth to a number to validate future annual reviews.</description>
        <formula>CASE(  
        AW_ReviewMonth__c ,
        &apos;January&apos;,1,
        &apos;February&apos;,2, 
        &apos;March&apos;,3,
        &apos;April&apos;,4,
        &apos;May&apos;,5,
        &apos;June&apos;,6,
        &apos;July&apos;,7,
        &apos;August&apos;,8,
        &apos;September&apos;,9,
        &apos;October&apos;,10,
        &apos;November&apos;,11,
        12
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month to Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Occupation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the Occupation of the Contact</description>
        <label>Occupation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AW_Occupation__c.AW_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AW_Occupation__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_OnwerId__c</fullName>
        <description>This contains user record ID</description>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Onwer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_OtherHobbyInterest__c</fullName>
        <description>This field is used to store Other Hobbies or Interests of the Contact</description>
        <label>Other Hobbies/Interests</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PB_OccupationName__c</fullName>
        <description>This field is referred in Process builders to invoke them, as occupation lookup field from Person field cannot be accessed in PB</description>
        <formula>AW_Occupation__r.Name</formula>
        <label>Occupation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PassportCountryOfIssue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This looks up to the country which has issued the passport</description>
        <label>Passport Country of Issue</label>
        <referenceTo>AW_Country__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_PositionRole__c</fullName>
        <description>This field shows if the contact is an adviser, executive or manager of a policy</description>
        <label>Position/Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adviser</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PostalAddressLineOne__c</fullName>
        <description>US-65817 / Field to store Postal Address  Line 1 (Billing Street)</description>
        <label>Postal Address  Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PostalAddressLineThree__c</fullName>
        <description>US-65817 / Field to store Postal Address Line 3 (Billing State)</description>
        <label>Postal Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PostalAddressLineTwo__c</fullName>
        <description>US-65817 / Field to store Postal Address  Line 2 (BillingCity)</description>
        <label>Postal Address  Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PostalCity__c</fullName>
        <description>This field represents the Postal City of the Client</description>
        <label>Postal City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PostalCode__c</fullName>
        <description>US-65817 / Field to store Postal Code</description>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PostalCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>US-65817 / Field to store Postal Country</description>
        <label>Postal Country</label>
        <referenceTo>AW_Country__c</referenceTo>
        <relationshipLabel>Contacts (Postal Country)</relationshipLabel>
        <relationshipName>ContactsPostalCountry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_PostalSuburb__c</fullName>
        <description>US-65817 / Field to store Postal Suburb</description>
        <label>Postal Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Race__c</fullName>
        <description>This field represents the Race or Ethnicity of the Client. UPDATE PICKLIST VALUES</description>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AW_African</fullName>
                    <label>African</label>
                </value>
                <value>
                    <fullName>AW_White</fullName>
                    <label>White</label>
                </value>
                <value>
                    <fullName>AW_Coloured</fullName>
                    <label>Coloured</label>
                </value>
                <value>
                    <fullName>AW_IndianAsian</fullName>
                    <label>Indian/Asian</label>
                </value>
                <value>
                    <fullName>AW_Other</fullName>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_ResidentialCity__c</fullName>
        <description>This field represents the Residential City of the Client</description>
        <label>Residential City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ResidentialCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>US-65817 / Field to store Residential Country</description>
        <label>Residential Country</label>
        <referenceTo>AW_Country__c</referenceTo>
        <relationshipLabel>Contacts (Residential Country)</relationshipLabel>
        <relationshipName>ContactsResidentialCountry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_ResidentialPostalCode__c</fullName>
        <description>US-65817 / Field to store Residential Postal Code</description>
        <label>Residential Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ResidentialStreetLineOne__c</fullName>
        <description>US-65817 / Field to store Residential Address Line 1 (Shipping Street) coming from Mulesoft</description>
        <label>Residential Street  Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ResidentialStreetLineThree__c</fullName>
        <description>US-65817 / Field to store Residential Address Line 1 (Shipping State)</description>
        <label>Residential Street Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ResidentialStreetLineTwo__c</fullName>
        <description>US-65817 / Field to store Residential Address Line 1 (Shipping City)</description>
        <label>Residential Street Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ResidentialSuburb__c</fullName>
        <description>US-65817 / Field to store Residential Suburb</description>
        <label>Residential Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_RetirementDate__c</fullName>
        <description>This field represents the date that the client retired</description>
        <label>Retirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_ReviewDone__c</fullName>
        <description>Has the contact been reviewed?</description>
        <formula>NOT(ISBLANK(AW_AnnualReviewDateCompleted__c))
&amp;&amp;
YEAR( AW_AnnualReviewDateCompleted__c ) = YEAR( TODAY() )</formula>
        <label>Review Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_ReviewMonth__c</fullName>
        <description>The indicates opted review month for contact</description>
        <label>Review Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Smoker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates person is smoker or not</description>
        <label>Smoker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_TaxNumber__c</fullName>
        <description>This field is used to store the tax number of the contact</description>
        <label>Tax Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>